unpackaged/main/default/objects/Rare_Animals__c/Rare_Animals__c.object-meta.xml
<CustomObject>
    <label>Rare Animals</label>
    <nameField>
        <label>Rare Animals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rare Animalss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>