unpackaged/main/default/objects/Rare_Animals__c/fields/How_Rare__c.field-meta.xml
<CustomField>
    <fullName>How_Rare__c</fullName>
    <description>how rare is the animal</description>
    <label>How Rare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>