unpackaged/main/default/objects/Rare_Animals__c/fields/jnadfjnadncjhsd__c.field-meta.xml
<CustomField>
    <fullName>jnadfjnadncjhsd__c</fullName>
    <label>jnadfjnad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>