unpackaged/main/default/objects/Rare_Animals__c/fields/Rescued__c.field-meta.xml
<CustomField>
    <fullName>Rescued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rescued</label>
    <type>Checkbox</type>
</CustomField>