unpackaged/main/default/objects/Rare_Animals__c/fields/super_rare__c.field-meta.xml
<CustomField>
    <fullName>super_rare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>super rare</label>
    <type>Checkbox</type>
</CustomField>